--- a/STUDYLOG_3-4강/날씨앱.md
+++ b/STUDYLOG_3-4강/날씨앱.md
@@ -73,4 +73,13 @@ await -> async 를 적용해야 한다
 7. json 파일 추출한다 let data = await response.json ();
 응답 받은 제이슨 파일을 넣어준다 
 
-8. 
+
+### UI 작업하기
+다른데서 쓰이는 정보는 따로 관리하자
+citis 배열로 관리하자
+버튼 다 지우고 {} (자바스크립트) 아래의 코드를 적용하면 한줄로 배열내에 있는 값을 모두 가져올 수 있다
+cities.map((item) => {
+  <Button varient>{item}</Button>
+})
+
+### 
