로딩 스피너 / 최근위치 지역 가져오기 완료

--- a/STUDYLOG_3-4강/날씨앱.md
+++ b/STUDYLOG_3-4강/날씨앱.md
@@ -73,4 +73,122 @@ await -> async 를 적용해야 한다
 7. json 파일 추출한다 let data = await response.json ();
 응답 받은 제이슨 파일을 넣어준다 
 
-8. 
+
+### 도시 버튼을 누르면 도시에 맞게 가죠오기
+1. 버튼 클릭하면 그래 onClick={함수 실행하겠지}
+2. 함수를 만들기 함수 안에 어떤 매개변수 들고 오기
+3. item 을 넘겨와 
+4. ui를 반영하자 let url을 가져오자 city를 
+5. 근데 box에 값을 어떻게 전달하지?
+6. 버튼과 인포와의 관계가 없다...
+7. 주고 싶은 정보를 porps로 넘길 수 이는데 자식이 부모한테 정보를 못준다
+8. 우리는 뭘 해줘야 하냐 app이 필요한 함수를 모두 가지고 있어야 한다
+9. app 이 정보를 가지고 있다가 정보를 필요로 하는 곳에 넘겨준다
+10. app이 실행되는 순간 만들어야 한다
+
+### APP 정보를 가지고 있게
+1. city를 weathebutton city 정보를 넘겨준다
+
+```jsx
+
+function App () {
+  const [weather, setWeather] = useState(null);
+  const [city, setCity] = useState(''); // 버튼에 있는걸 app으로 가져옴
+
+  const cities = ['seoul','paris','new york'];
+
+  const getCurrentLocation = () => {
+    navigator.geolocation.getCurrentPosition((position) => {
+      let lat = position.coords.latitude;
+      let lon = position.coords.longitude;
+      getWeatherByCurrentLocation(lat, lon);
+    }),
+  };
+
+  const getWeatherByCurrentLocation = async (lat, lon) = >{
+    let url ="API";
+    setLoading(true);
+    let response = await fetch(url);
+    let data = await reponse.json();
+    setWeather(date);
+  }
+
+  useEffect(()=> {
+    getCurrentLocation();
+  }, []);
+}
+
+return (
+  <div>
+    <div className="container">
+      <WeatherBox weather={weather}>
+      <WatherButton cities={cities} setCity={setCity}> 함수도 보내줄 수 있다
+    </div>
+  </div>
+)
+```
+
+
+```jsx
+
+const WeatherButton = ({cities, setCity}) => { //1. setCity 를 호출한다
+  console.log(cities);
+
+  return (
+    <div>
+        <Button variant="text" sx={{ color: "white" }}>Current Location</Button>
+
+        {cities.map((item, index)=> (
+            <Button  variant="text"  sx={{ color: "white" }}
+            onClick={()=>
+              setCity(item)} // 호출한 함수가 들어감 item값을 셋팅한다
+              // 버튼은 클릭을 하면 시티를 설정한다는 의미이다
+              // 어떤 시티를 선택했는디 state에 설정한다
+              // 버튼은 상태를 가지고 있지 않다
+              // useEffec를 app만들러 가보자 그리고 콘솔로 찍자
+            >{item}</Button>
+        ))}
+    </div>
+  )
+}
+
+export default WeatherButton
+
+
+```
+
+
+city상태를 주시하고 있다가 바뀌는 순간 useEffec 호출 
+앱은 단순히 보내준다
+버튼은 받은 함수를 이용해서 시티의 값을 바꿔준다
+
+```jsx
+
+  useEffect(() => {
+    console.log(city);
+  },[city]);
+
+
+```
+
+```jsx
+
+// 도시별 날씨를 보여주자
+  useEffect(() => {
+    getWeatherByCity();
+  },[city]);
+
+
+const getWeatherBycity = async() => {
+  let url= 'api by city name{city name -> {city 상태위에 선언}}';
+  // useEffect가 상태를 반영한 후 실행되기 때문에 굳이 await 할 필요가 없다 비동기 필요없다 {API 넣음}
+  
+  let response = await fetch(url)
+  let data = await response.json()
+  console.log("data",data);
+
+}
+```
+
+### 로딩 스피터
+데이터가 도착하기 전까지 로딩 스피너가 나온다
